--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"c508dfded0f6b447f2a708bbaaecf899"'
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"WEATHER_API_KEY"'
     }
 }
 
